--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,14 +83,28 @@ workflows:
           filters:
             branches:
               ignore: master
-  publish-package:
+  check-master:
     jobs:
       - check-build:
           filters:
             branches:
               only: master
             tags:
-              only: /.*/
+              ignore: /^\d+\.\d+\.\d+$/
+      - update-readme:
+          filters:
+            branches:
+              only: master
+            tags:
+              ignore: /^\d+\.\d+\.\d+$/
+  publish-package:
+    jobs:
+      - check-build:
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^\d+\.\d+\.\d+$/
       - publish-build:
           requires:
             - check-build
